# IPL

./: .gitignore  404.html  CMakeLists.txt  README.md  appveyor.yml  compile_commands.json  config.toml  index.html  index.xml  publish.sh  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: smoke.yml
9MI0800164/Homework1_9MI0800164/: lex.yy.c  lua_lex.l  output
JSImpl/: .gitignore  CMakeLists.txt  CMakePresets.json  CodingStyle.md
JSImpl/JS.Common/: JS.Common.vcxitems  JS.Common.vcxitems.filters
JSImpl/examples/: code.js
JSImpl/solution/: JSImpl.make  JSImpl.sln  JSImpl.vcxproj  JSImpl.vcxproj.filters  JSLib.make  JSLib.vcxproj  JSLib.vcxproj.filters  Makefile  Test.make  Test.vcxproj  Test.vcxproj.filters  dummy_gc.make  dummy_gc.vcxproj  dummy_gc.vcxproj.filters  genie.lua  gmock.make  gmock.vcxproj  gmock.vcxproj.filters  gtest.make  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.make  gtest_main.vcxproj  gtest_main.vcxproj.filters  leak_gc.make  leak_gc.vcxproj  leak_gc.vcxproj.filters  spasm.make  spasm.vcxproj  spasm.vcxproj.filters  spasm_lib.make  spasm_lib.vcxproj  spasm_lib.vcxproj.filters  sprt.make  sprt.vcxproj  sprt.vcxproj.filters  sprun.make  sprun.vcxproj  sprun.vcxproj.filters  test_bench.make  (+2 more)
JSImpl/src/: ASTInterpreter.cpp  ASTInterpreter.h  ASTPrinter.cpp  ASTPrinter.h  ByteCodeGenerator.cpp  ByteCodeGenerator.h  CMakeLists.txt  CommonTypes.h  Expression.cpp  Expression.h  ExpressionDefinitions.h  ExpressionVisitor.h  ExpressionsFwd.h  JSONParser.cpp  JSONParser.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  main.cpp
JSImpl/src/Tests/: main.cpp
JSImpl/test/: ASTInterpreterTests.cpp  CMakeLists.txt  CodeGenerationTests.cpp  LexTestFile.js  LexerTests.cpp  ParserTests.cpp  Test.make  Test.vcxproj  Test.vcxproj.filters  empty.cpp  genie.lua  gmock.make  gmock.vcxproj  gmock.vcxproj.filters  gtest.make  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.make  gtest_main.vcxproj  gtest_main.vcxproj.filters  sprtTests.cpp
JSImpl/test/googletest/googletest/src/: gtest-internal-inl.h
about/: index.html
ahead-of-time-compilation/: index.html
categories/: index.html  index.xml
course-contents/: index.html
css/: main.css
demo/asm/: add_answer.asm  main.cpp
demo/flex/: JavaScript.flex  genie.lua  hello.js  js2html.c  js2html.flex  lex.yy.c
demo/gperf/: JavaScript.gperf  JavaScript.gperf.cxx
demo/threaded/: switch.cpp  threaded.cpp
demo/tree-sitter-calc/: grammar.js  package.json  test.calc
edition/: index.html  index.xml
edition/2018/: index.html  index.xml
edition/2022/: index.html  index.xml
facebook-group/: index.html
garbage-collection/: index.html
gctest/: .clang-format  CMakeLists.txt  README.md  gc.h  gc_dummy.cpp  gc_leak.cpp  genie.lua  main.cpp  weighted_action.h
gctest/minitrace/: minitrace.c
gctest/solution/: Makefile  dummy_gc.make  dummy_gc.vcxproj  dummy_gc.vcxproj.filters  gctest.sln  genie.lua  leak_gc.make  leak_gc.vcxproj  leak_gc.vcxproj.filters  test_bench.make  test_bench.vcxproj  test_bench.vcxproj.filters
gctest/src/: CMakeLists.txt  gc_leak.cpp  main.cpp  minitrace.cpp
highlight-js/: agate.min.css
homework/45169/: Makefile  build_run.sh  example.py  python2html.flex  python2html.lex  python2html.lex.yy.c  python2html.tab.c  python2html.tab.h  python2html.y  python2html_lexer.c  result.html
homework/45180/: README.md  hw1.html  input.js  lexer.go
homework/81270/js2html/: CMakeLists.txt  Common.h  Highlighter.cpp  Highlighter.h  README.md  Token.cpp  Token.h  hello.js  js2html.cpp  js2html.flex  style.css
homeworks/: index.html
icons/: site.webmanifest
intro/: index.html
introduction-to-ipl-course/: index.html
introduction-to-virtual-machines/: index.html
js/: bundle.137f52b7d45992d3a34b8eb500c4e6f259e1f337233d9a1f00bb042863c0edbdf02a5dcd086bd3ce69d62b454c92a22c5ff520126634d704fd54e567492664c3.js  bundle.3212c12d708118e4e3b9a0d901756a3bd160377bde5e8422479daf9a4aed67ce9a2a1c0f22620fad0be10976c9d406a8bb4c0079fcd4141ae048fc270223ad61.js
just-in-time-compilation/: index.html
lexical-analysis/: index.html
midterm-test/: index.html
midterm-test-2018-edition/: index.html
midterm-test-results/: index.html
midterm-test-results-2018-edition/: index.html
objects-in-the-virtual-machine/: index.html
page/: index.html  index.xml
parser-generators/: index.html
parsing/: index.html
post/: index.html  index.xml
programming-languages-compilers-interpreters/: index.html
project/: README.md
project-presentations/: index.html
project-presentations-2018-edition/: index.html
project-presentations-schedule/: index.html
projects/: index.html
projects-2018-edition/: index.html
resources/: index.html
reveal-hugo/: object-assign.js
sass/: main.757064486a03d4d9da7e741a5160ec468a03696ae9e1ccb425a5c104e261d10f8176401e5923681a747b4922bf4658670a34e4e31975034372b5885c1992f471.css
september-session-exam/: index.html
september-session-exam-2018-edition/: index.html
slides/: index.html  index.xml
solution/: genie.lua  sprt.vcxproj  sprt.vcxproj.filters
spasm/: .clang-format  CMakeLists.txt
spasm/src/: CMakeLists.txt  dstack.cpp  dstack.hpp  frames.cpp  frames.hpp  main.cpp  program.spa  spasm.cpp  spasm.hpp  spasm_impl.hpp  string.hpp  types.hpp  value.hpp
spasm/src/asm/: CMakeLists.txt  assembler.cpp  assembler.hpp  bytecode.cpp  bytecode.hpp  dfa.dot  lexdump.cpp  lexdump3.cpp  lexer.cpp  lexer.hpp  lexer.re  main.cpp  symbol.cpp  symbol.hpp  token.cpp  token.hpp  tokenizer.cpp  tokenizer.hpp
spasm/test/: CMakeLists.txt  precompiled.h  sprtTests.cpp
tags/: index.html  index.xml
test/: index.html
values-in-virtual-machines/: index.html
website/: README.md  config.toml  publish.sh
(+730 files in other folders)
